# MVC-Game-Factory

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: factory_map.hpp  math.hpp
include/controller/: engine.hpp  glut_engine.hpp  input_event_handler.hpp  logic.hpp
include/flappy_box/controller/: box_object_logic.hpp  flappy_engine.hpp
include/flappy_box/model/: box.hpp
include/flappy_box/view/: box_audible.hpp  box_drawable.hpp
include/model/: game.hpp  game_object.hpp
include/test43/controller/: test43_object_logic.hpp
include/test43/model/: test43_object.hpp
include/test43/view/: test43_audible.hpp  test43_drawable.hpp
include/view/: al_renderer.hpp  gl_renderer.hpp  glut_window.hpp
msvc2013/ex4/: ex4.sln  ex4.vcxproj  ex4.vcxproj.filters  extlibs.props
src/: main41.cpp  main43.cpp
src/controller/: engine.cpp  glut_engine.cpp  logic.cpp
src/flappy_box/controller/: box_object_logic.cpp  flappy_engine.cpp
src/flappy_box/model/: box.cpp
src/flappy_box/view/: box_audible.cpp  box_drawable.cpp
src/model/: game.cpp  game_object.cpp
src/test43/controller/: test43_object_logic.cpp
src/test43/model/: test43_object.cpp
src/test43/view/: test43_audible.cpp  test43_drawable.cpp
src/view/: al_renderer.cpp  gl_renderer.cpp  glut_window.cpp
win32/Freeglut/lib/: freeglut.lib
win32/OpenAL/example/helloworld_msvc2013/: ReadMe.txt  extlibs.props  helloworld_msvc2013.cpp  helloworld_msvc2013.sln  helloworld_msvc2013.vcxproj  helloworld_msvc2013.vcxproj.filters  stdafx.cpp
